--- a/GPEA_GreenImpacts.mjml
+++ b/GPEA_GreenImpacts.mjml
@@ -1,8 +1,12 @@
 <mjml>
   <mj-head>
-    <mj-font name="Noto Sans TC" href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500&display=swap" />
+    <mj-raw>
+    	<meta name="color-scheme" content="light">
+			<meta name="supported-color-schemes" content="light">
+    </mj-raw>
+    <mj-font name="Noto Sans TC" href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&display=swap" />
     <mj-attributes>
-      <mj-all padding="0px" />
+      <mj-all padding="0px"/>
       <mj-all font-family="Noto Sans TC, Arial, sans-serif"></mj-all>
       <mj-section border-left="1px lightgrey solid" border-right="1px lightgrey solid" />
       
@@ -19,11 +23,55 @@
       </mj-selector>
     </mj-html-attributes>
     <mj-title>GPEA Green Impacts Email Blocks Template</mj-title>
+    <mj-style>
+      :root {
+        color-scheme: light;
+      }
+    </mj-style>
     <mj-style inline="inline"> @media (min-width:480px) { .rightPad10 { padding-left: 0px !important; padding-right: 10px !important; } .leftPad10 { padding-left: 10px !important; padding-right: 0px !important; } } </mj-style>
     <mj-style inline="inline"> @media (max-width:480px) { .lrPad20 { padding-left: 20px !important; padding-right: 20px !important; } .mobHide { display: none !important; } } </mj-style>
     <mj-style inline="inline"> .body-section { -webkit-box-shadow: 1px 4px 11px 0px rgba(0, 0, 0, 0.15); -moz-box-shadow: 1px 4px 11px 0px rgba(0, 0, 0, 0.15); box-shadow: 1px 4px 11px 0px rgba(0, 0, 0, 0.15); } .link-nostyle { color: #66cc00;} </mj-style>
+    <mj-style inline="inline">
+      .bg-292F47{
+        background:#292F47; background-image:linear-gradient(#292F47,#292F47);
+      }
+      .bg-292F47{
+        background:#292F47; background-image:linear-gradient(#292F47,#292F47);
+      }
+      .bg-6c0{
+        background:#6c0; background-image:linear-gradient(#6c0,#6c0);
+      }
+      .bg-ff8100{
+        background:#ff8100; background-image:linear-gradient(#ff8100,#ff8100);
+      }
+      
+    </mj-style>
+    <mj-style>
+      u + .body .mixblend>table {
+        background: #000;
+        mix-blend-mode: screen;
+      }
+      
+      u + .body .mixblend>table>tbody {
+        background: #000;
+        mix-blend-mode: difference;
+      }
+      u + .body .ff8100-button tbody{
+        background:#ff8100!important;
+        background-image:linear-gradient(#ff8100,#ff8100)!important;
+      }
+      u + .body .ff8100-button td{
+        background: #000!important;
+        mix-blend-mode: screen;
+      }
+      u + .body .ff8100-button a{
+        background: #000!important;
+        mix-blend-mode: difference;
+      }
+    </mj-style>
   </mj-head>
-  <mj-body background-color="#ffffff">
+  <mj-body background-color="white">
+    
     <!-- /* SFMC opencounter snippet */ -->
     <mj-raw>
       <div style="font-size:0; line-height:0;">
@@ -31,15 +79,15 @@
       </div>
     </mj-raw>
     <!-- /* Content Block Standard Header Start */ -->
-    <mj-wrapper background-color="#6c0">
+    <mj-wrapper border-left="1px lightgrey solid" border-right="1px lightgrey solid">
       <!-- Issue Number -->
-      <mj-section padding-top="15px">
+      <mj-section padding-top="15px" css-class="bg-6c0 mixblend" border-left="0" border-right="0">
         <mj-column padding="0 30px">
-          <mj-text font-size="14px" color="white" align="right" padding="0">2022年春季號</mj-text>
+          <mj-text font-size="14px" color="white" align="right" padding="0" css-class="mixblend-diff">2022年春季號</mj-text>
         </mj-column>
       </mj-section>
       <!-- Issue Number -->
-      <mj-section background-color="#6c0" padding-top="5px" padding-bottom="10px">
+      <mj-section css-class="bg-6c0" padding-top="5px" padding-bottom="10px" border-left="0" border-right="0">
         <!-- Logo -->
         <mj-column>
           <mj-image width="111px" align="center" src="https://image.greentw.greenpeace.org/lib/fe3211717564047d7c1278/m/1/112657b6-1100-45ad-92d4-9691800e57b2.png" href="https://www.greenpeace.org/taiwan/" padding="0px">
@@ -47,29 +95,37 @@
         </mj-column>
         <!-- Logo -->
       </mj-section>
-      <mj-section>
-        <mj-column padding="0 0 25px 0">
-          <mj-text font-size="28px" align="center" color="white" font-weight="500" line-height="1.1" padding-bottom="0">環保成果大事紀</mj-text>
-          <mj-text font-size="14px" align="center" color="white" padding="0">Green Impacts．Spring 2022</mj-text>
+      <mj-section css-class="bg-6c0 mixblend" border-left="0" border-right="0">
+        <mj-column padding="0 0 40px 0">
+          <mj-text font-size="28px" align="center" color="white" font-weight="500" line-height="1.1" padding-bottom="0" css-class="mixblend-diff">環保成果大事紀</mj-text>
+          <mj-text font-size="14px" align="center" color="white" padding="0" css-class="mixblend-diff">Green Impacts．Spring 2022</mj-text>
         </mj-column>
       </mj-section>
-      <mj-section background-color="#ffffff" padding-top="15px" padding-bottom="10px">
+      <mj-section padding-top="15px" padding-bottom="10px" border-left="0" border-right="0">
         <mj-column padding="0 9%">
-          <mj-image src="https://image.greentw.greenpeace.org/lib/fe3211717564047d7c1278/m/1/05d91681-4f28-4aea-8eee-9a85d6b1e708.gif" border="1px solid #6c0" width="185px" padding-bottom="0" padding-top="0" />
+          <mj-image src="https://image.greentw.greenpeace.org/lib/fe3211717564047d7c1278/m/1/05d91681-4f28-4aea-8eee-9a85d6b1e708.gif" width="185px" padding-bottom="0" padding-top="0"  />
         </mj-column>
       </mj-section>
     </mj-wrapper>
     
     <!-- /* Content Block Standard Header End */ -->
     <!-- /* Content Block 0. Headline Start */ -->
-    <mj-section background-color="#ffffff" padding-top="10px" padding-bottom="10px">
+    <mj-section padding-top="10px" padding-bottom="10px" >
       <mj-column padding="0 9%">
-        <mj-text align="left">
+        <mj-text align="left" color="#000">
           開始某些擁有眾人，中學違反還沒有台中實現球隊防治先進教育形式全部對方，有着遵守不禁今日暴力網頁課程溝通父母有利於，依然強調本次答應您現在歲月突出武器，特別是滿意網際網路臺灣人衣服次數，編號改進這一公里衝擊巨大聯盟大全東京面對報紙能源，手上聯繫苗栗會在上去說到依舊是一個只有不懂稿件表示限制那樣，明顯男女生氣電視劇城市老婆創新司機符合消費信箱，策略飯店數字魔獸心裡分為深深今年提交當時和平方面回到，動畫案件馬上，大型日記事實上積分，男子時間靈魂成果標準，並不是事務貼圖，崇拜培訓次。
         </mj-text>
       </mj-column>
     </mj-section>
     <!-- /* Content Block 0. Headline End */ -->
+
+    <!-- /* Content Block  Space Horizontal Rule Start */ -->
+    <mj-section padding="0">
+      <mj-column width="100%">
+        <mj-spacer height="30px" />
+      </mj-column>
+    </mj-section>
+    <!-- /* Content Block  Space Horizontal Rule End */ -->
 
     <!-- /* Content Block 1. Block Title Start */ -->
     <mj-section padding="10px 9% 10px 9%">
@@ -94,9 +150,9 @@
       </mj-section>
       <!-- Issue Header End -->
       <!-- Header 2 Start -->
-      <mj-section padding="5px 9% 5px 9%">
+      <mj-section padding="5px 9% 10px 9%">
         <mj-column>
-          <mj-text font-weight="500" padding="0">減塑好開始！聯合國通過制訂《全球塑膠公約》</mj-text>
+          <mj-text font-weight="700" padding="0" font-size="18px">減塑好開始！聯合國通過制訂《全球塑膠公約》</mj-text>
         </mj-column>
       </mj-section>
       <!-- Header 2 End -->
@@ -116,9 +172,9 @@
       </mj-section>
       <!-- Text 1 End -->
       <!-- Read More Start -->
-      <mj-section padding="10px 9%">
+      <mj-section padding="10px 9% 20px 9%">
         <mj-column>
-          <mj-button background-color="transparent" border-radius="0" color="#6c0" font-size="16px" font-weight="400" height="14px" width="190px" padding="0" inner-padding="0 0 5px " border-bottom="1px solid #6c0" align="right" href="https://www.greenpeace.org/taiwan/" target="_blank" title="" text-align="right">閱讀更多 Read More →</mj-button>
+          <mj-button background-color="transparent" border-radius="0" color="#6c0" font-size="16px" font-weight="400" height="14px" padding="0" inner-padding="0 0 5px " border-bottom="1px solid #6c0" align="right" href="https://www.greenpeace.org/taiwan/" target="_blank" title="" text-align="right">閱讀更多 Read More →</mj-button>
         </mj-column>
       </mj-section>
       <!-- Read More End -->
@@ -129,17 +185,17 @@
     <!-- Header 3 Start -->
     <mj-section padding="10px 9%">
       <mj-column>
-        <mj-text font-size="22px" color="#6c0" font-weight="500" align="center" padding="0">更多成果故事</mj-text>
+        <mj-text font-size="18px" color="#6c0" font-weight="700" align="center" padding="0">更多成果故事</mj-text>
       </mj-column>
     </mj-section>
     <!-- Header 3 End -->
     <!-- Text 2 Start -->
-    <mj-section padding="10px 9%">
+    <mj-section padding="10px 9% 10px 9%">
       <mj-column>
-        <mj-text font-weight="500" line-height="1.3">
-        <a href="https://www.greenpeace.org/taiwan/" target="_blank" title="" style="color:black; text-decoration:underline;">公眾團結力量大，成功搶救阿根廷海，中止石油企業探勘計畫</a>
-        <br><br>
-        <a href="https://www.greenpeace.org/taiwan/" target="_blank" title="" style="color:black; text-decoration:underline;">公眾團結力量大，成功搶救阿根廷海，中止石油企業探勘計畫</a>
+        <mj-text font-weight="400" line-height="1.3">
+          <a href="https://www.greenpeace.org/taiwan/" target="_blank" title="" style="color:black; text-decoration:underline;">公眾團結力量大，成功搶救阿根廷海，中止石油企業探勘計畫</a>
+          <br><br>
+          <a href="https://www.greenpeace.org/taiwan/" target="_blank" title="" style="color:black; text-decoration:underline;">公眾團結力量大，成功搶救阿根廷海，中止石油企業探勘計畫</a>
         </mj-text>
       </mj-column>
     </mj-section>
@@ -148,7 +204,7 @@
     <!-- /* Content Block 3. Article Links Collection End */ -->
 
     <!-- /* Content Block 1. Block Title Start */ -->
-    <mj-section padding="10px 9%">
+    <mj-section padding="10px 9% 10px 9%">
       <mj-group>
         <mj-column width="1%" vertical-align="top" padding="0px 0 0 0">
           <mj-spacer container-background-color="#6c0" height="29px" />
@@ -166,8 +222,8 @@
         <mj-image border="none" padding="0 0 15px 0" src="https://fakeimg.pl/420x420/?text=+" href="https://www.greenpeace.org/taiwan/" alt="Greenpeace" target="_blank" title="" />
       </mj-column>
       <mj-column padding-left="10px">
-        <mj-text font-size="14px" align="left">
-          <strong style="font-size:16px;font-weight:500">Sofia</strong> Alberta
+        <mj-text font-size="12px" align="left">
+          <strong style="font-size:18px;font-weight:700;padding-right:14px;">Sofia</strong>Alberta
         </mj-text>
         <mj-text align="left">辦理就好表情接收二十機械創新各國沉默生存瀏覽器，農業天使上下和諧經營許可證重要服裝可惜首頁羅東，加上同步發展外貿關注水晶如果你感謝更新支持，版本場所相當預防犯罪進一步差不多運輸，圖象一樣敵人幸福能否，因素等方面計算我的心眼裡，幾年刺激，當天新年部分任意一。
         </mj-text>
@@ -175,16 +231,38 @@
     </mj-section>
     <!-- /* Content Block 4. Image + Text 1, Image left End */ -->
 
-    <!-- /* Content Block 5. Highlight Block 1 Start */ -->
-    <mj-section background-color="#ffffff" padding-bottom="40px" padding-top="40px">
-      <mj-column width="100%" background-color="#66cc00" padding="40px 9%">
-        <mj-text color="#ffffff" line-height="1.5" padding-bottom="0px">
-          <p>綠色和平與絕大部分非牟利組織不同，因為我們從不接受政府或企業的捐款，所有經費均來自公眾捐款。</p>
-        </mj-text>
-        <mj-button background-color="#ff8100" color="#ffffff" width="50%" font-size="16px" line-height="1.5" font-weight="bold" align="center" border-radius="4px" padding-top="12px" padding-bottom="8px" href="https://www.greenpeace.org/taiwan/">捐助支持</mj-button>
+    <!-- /* Content Block  Space Horizontal Rule Start */ -->
+    <mj-section padding="0">
+      <mj-column width="100%">
+        <mj-spacer height="30px" />
       </mj-column>
     </mj-section>
+    <!-- /* Content Block  Space Horizontal Rule End */ -->
+
+    <!-- /* Content Block 5. Highlight Block 1 Start */ -->
+    <mj-wrapper background-color="#ffffff" border-left="1px lightgrey solid" border-right="1px lightgrey solid">
+      <mj-section css-class="bg-6c0 mixblend" border-left="0" border-right="0">
+        <mj-column width="100%" padding="40px 9% 0 9%">
+          <mj-text color="#ffffff" line-height="1.5" padding-bottom="0px">
+            <p>綠色和平與絕大部分非牟利組織不同，因為我們從不接受政府或企業的捐款，所有經費均來自公眾捐款。</p>
+          </mj-text>
+        </mj-column>
+      </mj-section>
+      <mj-section css-class="bg-6c0" border-left="0" border-right="0">
+        <mj-column width="100%" padding="0 9% 40px 9%">
+          <mj-button color="#ffffff" background-color="#ff8100" css-class="ff8100-button" font-size="16px" line-height="1.5" font-weight="bold" align="center" border-radius="4px" padding-top="12px" padding-bottom="8px" href="https://www.greenpeace.org/taiwan/">工作秘辛大公開</mj-button>
+        </mj-column>
+      </mj-section>
+    </mj-wrapper>
     <!-- /* Content Block 5. Highlight Block 1 End */ -->
+
+    <!-- /* Content Block  Space Horizontal Rule Start */ -->
+    <mj-section padding="0">
+      <mj-column width="100%">
+        <mj-spacer height="30px" />
+      </mj-column>
+    </mj-section>
+    <!-- /* Content Block  Space Horizontal Rule End */ -->
 
     <!-- /* Content Block 1. Block Title Start */ -->
     <mj-section padding="10px 9%">
@@ -229,21 +307,41 @@
     </mj-section>
     <!-- /* Content Block 7a. Single Column Image Set End */ -->
 
-    <!-- /* Content Block 5b. Highlight Block 2 Start */ -->
-    <mj-section background-color="#ffffff" padding-bottom="40px" padding-top="40px">
-      <mj-column width="100%" background-color="#292F47" padding="40px 9%">
-        <mj-text color="#ffffff" font-size="18px" line-height="1.5" padding-bottom="0px" align="center" font-weight="500">
-          您有5秒時間嗎？
-        </mj-text>
-        <mj-text color="#ffffff" line-height="1.5" padding-bottom="15px" align="center">
-          邀請您花5秒時間，讓我們更了解您感興趣的環保議題，為您呈上相關的環保消息和動態！日後您可以隨時透過電郵連結修改您的喜好設定。
-        </mj-text>
-        <mj-button background-color="#ff8100" color="#ffffff" width="50%" font-size="16px" line-height="1.5" font-weight="bold" align="center" border-radius="4px" padding-top="12px" padding-bottom="8px" href="https://www.greenpeace.org/taiwan/update/20277/臺灣女孩擔任綠色和平船艦水手，工作秘辛大公開/">工作秘辛大公開</mj-button>
+    <!-- /* Content Block  Space Horizontal Rule Start */ -->
+    <mj-section padding="0">
+      <mj-column width="100%">
+        <mj-spacer height="30px" />
       </mj-column>
     </mj-section>
+    <!-- /* Content Block  Space Horizontal Rule End */ -->
+
+    <!-- /* Content Block 5b. Highlight Block 2 Start */ -->
+    <mj-wrapper background-color="#ffffff" border-left="1px lightgrey solid" border-right="1px lightgrey solid">
+      <mj-section css-class="bg-292F47 mixblend" border-left="0" border-right="0">
+        <mj-column width="100%" padding="40px 9% 0 9%" >
+          <mj-text color="#ffffff" font-size="18px" line-height="1.5" padding-bottom="0px" align="center" font-weight="500">
+            您有5秒時間嗎？
+          </mj-text>
+          <mj-text color="#ffffff" line-height="1.5" padding-bottom="15px" align="center">
+            邀請您花5秒時間，讓我們更了解您感興趣的環保議題，為您呈上相關的環保消息和動態！日後您可以隨時透過電郵連結修改您的喜好設定。
+          </mj-text>
+        </mj-column>
+      </mj-section>
+      <mj-section css-class="bg-292F47" border-left="0" border-right="0">
+        <mj-column width="100%" padding="0 9% 40px 9%">
+          <mj-button css-class="ff8100-button" background-color="#ff8100" color="#ffffff" font-size="16px" line-height="1.5" font-weight="bold" align="center" border-radius="4px" padding-top="12px" padding-bottom="8px" href="https://www.greenpeace.org/taiwan/update/20277/臺灣女孩擔任綠色和平船艦水手，工作秘辛大公開/"><span>工作秘辛大公開</span></mj-button>
+        </mj-column>
+      </mj-section>
+    </mj-wrapper>
     <!-- /* Content Block 5b. Highlight Block 2 End */ -->
 
-
+    <!-- /* Content Block  Space Horizontal Rule Start */ -->
+    <mj-section padding="0">
+      <mj-column width="100%">
+        <mj-spacer height="30px" />
+      </mj-column>
+    </mj-section>
+    <!-- /* Content Block  Space Horizontal Rule End */ -->
     
     <!-- Footer Start-->
     <mj-section padding="0px" background-color="#ffffff" padding="20px">
